--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "firebase": "^12.6.0",
+    "mongodb": "^7.0.0",
     "next": "16.0.3",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
-    "react-loader-spinner": "^8.0.0"
+    "react-loader-spinner": "^8.0.0",
+    "sweetalert2": "^11.26.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
